fixinng instance of and test cases added